--- a/sass/components/_card-food.scss
+++ b/sass/components/_card-food.scss
@@ -20,6 +20,8 @@
 
         padding: 12px 24px 12px 10px;
         &__title {
+            transition: width 1s ease-out;
+
             @include font-medium(18px);
             margin: 0;
             color: black;
@@ -34,21 +36,21 @@
             flex-direction: row;
             justify-content: space-between;
             flex-wrap: nowrap;
-            gap: 5px;
+            gap: 8px;
 
-            flex-shrink: 1;
+            flex-shrink: 2;
             color: $color-grey-dark;
             
             $fontSize: 15px;
             &__describe {
-                min-width: 0;
+                transition: width 1s ease-out;
+
                 white-space: nowrap;
                 overflow: hidden;
                 text-overflow: ellipsis;
-                flex-shrink: 2;
+                flex: 0 2 100%;
 
                 @include font-light($fontSize);
-                /* width: 212px; */
             }
             &__price {
                 @include font-bold($fontSize);
@@ -56,6 +58,7 @@
         }
     }
     &__check {
+        flex-shrink: 0;
         border-radius: 0 16px 16px 0;
         background: $color-tertiary;
         /* width: 55px; quand affiché */
@@ -72,6 +75,8 @@
             border-radius: 50%;
             width: 22px;
             height: 22px;
+            min-width: 22px;
+            min-height: 22px;
 
             display: flex;
             &__icone {
@@ -82,6 +87,12 @@
         }
     }
     &:hover {
+        .card-food__container__title {
+            width: 14em;
+        }
+        .card-food__container__content__describe {
+            width: 2em;
+        }
         & .card-food__check {
             width: 55px;
 
